# midas-journal-321

./: CMakeLists.txt
3DCellSegmentation/: CMakeLists.txt  LevelSetBasedCellSegmentationParameters.txt
3DCellSegmentation/CellFeatureGenerator/: itkCellFeatureGenerator.h  itkCellFeatureGenerator.txx
3DCellSegmentation/CellForegroundExtraction/: itkCellForegroundExtraction.h  itkCellForegroundExtraction.txx
3DCellSegmentation/CellStatistics/: itkCellStatistics.h  itkCellStatistics.txx
3DCellSegmentation/LevelSetBasedCellSegmentation/: itkLevelSetBasedCellSegmentation.h  itkLevelSetBasedCellSegmentation.txx  itkShapeLevelSetBasedCellSegmentation.h  itkShapeLevelSetBasedCellSegmentation.txx
3DCellSegmentation/ROIExtract/: README
3DCellSegmentation/SeedExtraction/: itkSeedExtraction.h  itkSeedExtraction.txx
3DCellSegmentation/VoronoiSegmentation/: itkVoronoiBasedCellSegmentation.h  itkVoronoiBasedCellSegmentation.txx
Options/: CMakeLists.txt  anyoption.cxx  anyoption.h
Utilities/: CMakeLists.txt  README
Utilities/binaryAttributeMorphology/: CMakeLists.txt  TODO.txt  attribute_values.cxx  attribute_values_test.cxx  auto_crop.cxx  binary_closing_by_reconstruction.cxx  binary_fillhole.cxx  binary_grind_peak.cxx  binary_opening_by_reconstruction.cxx  binary_reconstruction_by_dilation.cxx  binary_reconstruction_by_erosion.cxx  binary_shape_keep_n_objects.cxx  binary_shape_opening.cxx  binary_statistics_keep_n_objects.cxx  binary_statistics_opening.cxx  change_region.cxx  crop.cxx  example.py  generic_attribute.cxx  install_template.sh  label.cxx  label_overlay.cxx  label_reconstruction_by_dilation.cxx  label_shape_keep_n_objects.cxx  label_shape_opening.cxx  label_statistics_keep_n_objects.cxx  label_statistics_opening.cxx  label_statistics_opening_rgb.cxx  label_to_rgb.cxx  mask.cxx  pad.cxx  perf_threads.cxx  print_label_objects.cxx  reference_region.cxx  select.cxx  shape_relabel.cxx  simple_generic_attribute.cxx  statistics_relabel.cxx
Utilities/binaryAttributeMorphology/Wrapping/: CMakeLists.txt  WrapITKTypes.cmake  wrap_ITKLabelMapBase.cmake  wrap_itkAutoCropLabelMapFilter.cmake  wrap_itkBinaryClosingByReconstructionImageFilter.cmake  wrap_itkBinaryImageToLabelMapFilter.cmake  wrap_itkBinaryImageToShapeLabelMapFilter.cmake  wrap_itkBinaryImageToStatisticsLabelMapFilter.cmake  wrap_itkBinaryOpeningByReconstructionImageFilter.cmake  wrap_itkBinaryReconstructionLabelMapFilter.cmake.notwrapped  wrap_itkBinaryStatisticsKeepNObjectsImageFilter.cmake  wrap_itkBinaryStatisticsOpeningImageFilter.cmake  wrap_itkChangeRegionLabelMapFilter.cmake  wrap_itkCropLabelMapFilter.cmake  wrap_itkInPlaceLabelMapFilter.cmake  wrap_itkLabelImageToLabelMapFilter.cmake  wrap_itkLabelImageToShapeLabelMapFilter.cmake  wrap_itkLabelImageToStatisticsLabelMapFilter.cmake  wrap_itkLabelMap.cmake  wrap_itkLabelMapFilter.cmake  wrap_itkLabelMapMaskImageFilter.cmake  wrap_itkLabelMapOverlayImageFilter.cmake  wrap_itkLabelMapToBinaryImageFilter.cmake  wrap_itkLabelMapToLabelImageFilter.cmake  wrap_itkLabelMapToRGBImageFilter.cmake  wrap_itkLabelObject.cmake  wrap_itkLabelObjectLine.cmake  wrap_itkLabelReconstructionByDilationImageFilter.cmake  wrap_itkLabelSelectionLabelMapFilter.cmake  wrap_itkLabelStatisticsKeepNObjectsImageFilter.cmake  wrap_itkLabelStatisticsOpeningImageFilter.cmake  wrap_itkPadLabelMapFilter.cmake  wrap_itkRegionFromReferenceLabelMapFilter.cmake  wrap_itkShapeKeepNObjectsLabelMapFilter.cmake  wrap_itkShapeLabelMapFilter.cmake  wrap_itkShapeLabelObject.cmake  wrap_itkShapeOpeningLabelMapFilter.cmake  wrap_itkShapeRelabelLabelMapFilter.cmake  wrap_itkStatisticsKeepNObjectsLabelMapFilter.cmake  wrap_itkStatisticsLabelMapFilter.cmake  (+4 more)
Utilities/binaryAttributeMorphology/images/: 2th_ESCells.hdr  balls.nrrd
examples/: CMakeLists.txt
examples/3DCellSegmentation/: CMakeLists.txt
examples/3DCellSegmentation/CellFeatureGenerator/: CMakeLists.txt  CellFeatureGenerator.cxx  CellFeatureGenerator2D.cxx
examples/3DCellSegmentation/CellForegroundExtraction/: CMakeLists.txt  CellForegroundExtraction.cxx  CellForegroundExtraction2D.cxx
examples/3DCellSegmentation/CellStatistics/: CMakeLists.txt  CellStatistics.cxx  CellStatistics2D.cxx
examples/3DCellSegmentation/LevelSetBasedCellSegmentation/: CMakeLists.txt  LevelSetBasedCellSegmentation.cxx  LevelSetBasedCellSegmentation2D.cxx  ShapeLevelSetBasedCellSegmentation.cxx  ShapeLevelSetBasedCellSegmentation2D.cxx
examples/3DCellSegmentation/ROIExtract/: CMakeLists.txt  ROIExtract.cxx
examples/3DCellSegmentation/SeedExtraction/: CMakeLists.txt  SeedExtraction.cxx  SeedExtraction2D.cxx
examples/3DCellSegmentation/VoronoiSegmentation/: CMakeLists.txt  VoronoiBasedCellSegmentation.cxx  VoronoiBasedCellSegmentation2D.cxx
examples/Options/: CMakeLists.txt  demo.cxx
test/Data/: 30-dist.mha  30-feature.mha  30-fg.mha  30-gf.mha  30-levelset.mha  30-segment.mha  30-voronoi.mha  Multiphase2DSeg1.mha  Multiphase2DSeg2.mha  Multiphase2DSeg3.mha  Multiphase2Dphi1.mha  Multiphase2Dphi2.mha  Multiphase2Dphi3.mha  phi.mha  segDense2D.mha  segSparse2D.mha
